新增页面背景大图功能

--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,18 +1,7 @@
 <main class="content">
 
-    <!-- 头部融合背景标题 -->
-    <div class="content-heading bf-color">
-        <div class="container">
-            <div class="row">
-                <div class="col s12 m12 l12">
-                    <h3 class="heading"><%= page.title %></h3>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- 文章内容详情 -->
-    <div id="artDetail" class="container notice">
+    <div id="artDetail" class="container">
         <div class="card">
             <div class="card-content">
                 <% if (page.tags && page.tags.length) { %>
