--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,5 +1,5 @@
 <header class="navbar-fixed">
-    <nav id="headNav" class="bf-color none-shadow">
+    <nav id="headNav" class="bf-color nav-transparent">
         <div id="navContainer" class="container">
             <div class="nav-wrapper">
                 <div class="brand-logo">
@@ -16,3 +16,23 @@
         </div>
     </nav>
 </header>
+
+<div class="bg-cover page-header header-filter clear-filter purple-filter" data-parallax="true" 
+        style="background-image: url(&quot;/medias/bg.jpg&quot;); transform: translate3d(0px, 0px, 0px);">
+<div class="container">
+    <div class="row">
+        <div class="col s10 offset-s1 m8 offset-m2 l8 offset-l2">
+            <div class="brand">
+                <div class="title center-align"><%- config.title %></div>
+                <div class="description center-align">
+                <% if (config.description && config.description.length > 0) { %>
+                    <%= config.description %>
+                <% } else { %>
+                    从来没有真正的绝境，只有心灵的迷途
+                <% } %>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
