添加lightGallery效果，给tags和归档页添加动画效果

--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -40,7 +40,7 @@ yearArr.forEach(function(year) {
             <span><%= month %></span>
         </div>
         <% archivesList[year][month].map(function(post){  %>
-        <div class="cd-timeline-block">
+        <div class="cd-timeline-block" data-aos="fade-up">
             <div class="cd-timeline-img cd-picture">
                 <% if (post.img) { %>
                 <img src="<%= post.img %>" class="responsive-img" alt="<%- post.title %>">
