--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -28,7 +28,7 @@
                 <% if (config.description && config.description.length > 0) { %>
                     <%= config.description %>
                 <% } else { %>
-                    从来没有真正的绝境，只有心灵的迷途
+                    Never really desperate, only the lost of the soul.
                 <% } %>
                 </div>
             </div>
