--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -8,7 +8,7 @@
         <% if (config.description && config.description.length > 0) { %>
             <%= config.description %>
         <% } else { %>
-            从来没有真正的绝境，只有心灵的迷途
+            Never really desperate, only the lost of the soul.
         <% } %>
         </div>
     </div>
@@ -20,12 +20,6 @@
             </a>
         </li>
         <% }); %>
-        <hr>
-        <li>
-            <a id="themeHandle" class="waves-effect waves-light">
-                <i class="fa fa-gear fa-lg fa-fw"></i>主题设置
-            </a>
-        </li>
     </ul>
     <div class="social-link">
         <a href="https://github.com/blinkfox" class="tooltipped" target="_blank" data-tooltip="访问我的GitHub" data-position="top" data-delay="50">
