--- a/layout/_partial/paging.ejs
+++ b/layout/_partial/paging.ejs
@@ -12,7 +12,7 @@
             <% } %>
         </div>
         <div class="page-info col m4 l4 hide-on-small-only">
-            <div class="center-align b-text-gray">第 <%- page.current %> 页 / 共 <%- page.total %> 页</div>
+            <div class="center-align b-text-gray"><%- page.current %> / <%- page.total %></div>
         </div>
         <div class="col s6 m4 l4">
             <% if (page.next) { %>
