--- a/layout/_partial/search.ejs
+++ b/layout/_partial/search.ejs
@@ -2,8 +2,8 @@
 <div id="searchModal" class="modal">
     <div class="modal-content">
         <div class="search-header">
-            <span class="title">搜索文章</span>
-            <input type="search" id="searchInput" name="s" placeholder="搜索文章..." class="search-input" autofocus="">
+            <span class="title"><%= __('search') %></span>
+            <input type="search" id="searchInput" name="s" placeholder="<%= __('searchTip') %>" class="search-input" autofocus="">
         </div>
         <div id="searchResult"></div>
     </div>
