--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -34,7 +34,7 @@
                 </div>
                 <hr />
                 <div class="reprint">
-                    <p>转载请注明：<a href="<%- config.url %>" class="b-link-green"><%- config.title %></a> &raquo;
+                    <p><%= __('reprint') %>: <a href="<%- config.url %>" class="b-link-green"><%- config.title %></a> &raquo;
                         <a href="<%- url_for(page.path) %>" class="b-link-green"><%= page.title %></a>
                     </p>
                 </div>
