新增了显示默认特征图片的功能

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -12,7 +12,7 @@
     <title><%= config.title %></title>
     <link rel="icon" type="image/png" href="<%= theme.favicon %>">
 
-    <% if (theme.stylesheets !== undefined && theme.stylesheets.length > 0) { %>
+    <% if (theme.stylesheets && theme.stylesheets.length > 0) { %>
         <% theme.stylesheets.forEach(function(url) { %>
         <link rel="stylesheet" href="<%= url %>">
         <% }); %>
