--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -10,24 +10,51 @@
     </div>
     <% } %>
 
+    <%
+        var hashCode = function(str) {
+            if (!str && str.length === 0) {
+                return 0;
+            }
+
+            var hash = 0;
+            for (var i = 0, len = str.length; i < len; i++) {
+                hash = ((hash << 5) - hash) + str.charCodeAt(i);
+                hash |= 0;
+            }
+            return hash;
+        }
+    %>
+
     <!-- 所有文章卡片 -->
     <article id="articles" class="container articles">
         <div class="row article-row">
             <% page.posts.forEach(post => { %>
-            <div class="article col s12 m6 l4" data-aos="fade-up">
+            <div class="article col s12 m6 l4" data-aos="zoom-in">
                 <div class="card">
                     <a href="<%- url_for(post.path) %>">
                         <div class="card-image">
                             <% if (post.img) { %>
                             <img src="<%= post.img %>" class="responsive-img" alt="<%- post.title %>">
                             <% } else { %>
-                            <img src="<%= theme.featureimg %>" class="responsive-img" alt="<%- post.title %>">
+                                <%
+                                var featureimg = '/medias/featureimages/default0.jpg';
+                                var featureImages = theme.featureImages;
+                                if (!featureImages || featureImages.length == 0) {
+                                    return featureimg;
+                                }
+
+                                var len = featureImages.length;
+                                var num = Math.abs(hashCode(post.title) % len);
+                                featureimg = featureImages[num];
+                                console.log('hash code value:' + num, ', featureimg:' + featureimg);
+                                %>
+                            <img src="<%- featureimg %>" class="responsive-img" alt="<%- post.title %>">
                             <% } %>
                             <span class="card-title"><%- post.title %></span>
                         </div>
 
                         <div class="card-content article-content">
-                            <div class="summary"><%- post.content.replace(/<[^<>]+?>/g, '').substring(0, 80) %></div>
+                            <div class="summary"><%- post.content.replace(/<[^<>]+?>/g, '').substring(0, 60) %></div>
                             <div class="publish-info">
                                 <span class="publish-date">
                                     <i class="fa fa-calendar fa-fw"></i><%= date(post.date, config.date_format) %>
