--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -1,4 +1,17 @@
 <%
+var hashCode = function(str) {
+    if (!str && str.length === 0) {
+        return 0;
+    }
+
+    var hash = 0;
+    for (var i = 0, len = str.length; i < len; i++) {
+        hash = ((hash << 5) - hash) + str.charCodeAt(i);
+        hash |= 0;
+    }
+    return hash;
+};
+
 var archivesList = {}, lastYear = null, yearArr = [];
 
 site.posts.sort('date').reverse().forEach(function(post) {
@@ -45,7 +58,12 @@ yearArr.forEach(function(year) {
                 <% if (post.img) { %>
                 <img src="<%= post.img %>" class="responsive-img" alt="<%- post.title %>">
                 <% } else { %>
-                <img src="<%= theme.featureimg %>" class="responsive-img" alt="<%- post.title %>">
+                <%
+                    var len = theme.featureImages.length;
+                    var num = Math.abs(hashCode(post.title) % len);
+                    var featureimg = theme.featureImages[num];
+                %>
+                <img src="<%= featureimg %>" class="responsive-img" alt="<%- post.title %>">
                 <% } %>
             </div>
             <div class="cd-timeline-content">
