--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -587,6 +587,7 @@ article .article-tags .chip {
 #articleContent img {
     max-width: 100%;
     height: auto;
+    cursor: pointer;
 }
 
 #articleContent ol,
