--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -37,7 +37,7 @@
                             <img src="<%= post.img %>" class="responsive-img" alt="<%- post.title %>">
                             <% } else { %>
                                 <%
-                                var featureimg = '/medias/featureimages/default0.jpg';
+                                var featureimg = '/medias/featureimages/0.jpg';
                                 var featureImages = theme.featureImages;
                                 if (!featureImages || featureImages.length == 0) {
                                     return featureimg;
@@ -46,7 +46,6 @@
                                 var len = featureImages.length;
                                 var num = Math.abs(hashCode(post.title) % len);
                                 featureimg = featureImages[num];
-                                console.log('hash code value:' + num, ', featureimg:' + featureimg);
                                 %>
                             <img src="<%- featureimg %>" class="responsive-img" alt="<%- post.title %>">
                             <% } %>
@@ -54,7 +53,7 @@
                         </div>
 
                         <div class="card-content article-content">
-                            <div class="summary"><%- post.content.replace(/<[^<>]+?>/g, '').substring(0, 60) %></div>
+                            <div class="summary"><%- strip_html(post.content).substring(0, 60) %></div>
                             <div class="publish-info">
                                 <span class="publish-date">
                                     <i class="fa fa-calendar fa-fw"></i><%= date(post.date, config.date_format) %>
