--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -785,16 +785,17 @@ table tr:nth-child(2n), thead {
     border-radius: 50%;
     box-shadow: 0 0 0 4px #ffffff, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
 }
+
 .cd-timeline-img img {
+    position: relative;
     display: block;
+    top: 50%;
+    left: 50%;
     width: 40px;
     height: 40px;
-    border-radius: 50%;
-    position: relative;
-    left: 50%;
-    top: 50%;
     margin-left: -20px;
-    margin-top: -20px;
+    border-radius: 50%;
+    cursor: pointer;    
 }
 
 @media only screen and (min-width: 900px) {
